# vocos

./: README.md  REPORT.md  inference.py  pyproject.toml  requirements.txt  run.py  synthesize.py  train.py  vocos_demo.ipynb
src/configs/: synthesize.yaml  vocos.yaml  vocos_inference.yaml  vocos_onebatchtest.yaml
src/configs/dataloader/: example.yaml
src/configs/datasets/: custom_dir.yaml  ruslan.yaml  ruslan_inference.yaml  ruslan_onebatchtest.yaml
src/configs/melspectrogram/: melspectrogram.yaml
src/configs/model/: vocos.yaml  vocos_resnet.yaml
src/configs/transforms/: vocos.yaml
src/configs/transforms/instance_transforms/: vocos.yaml
src/configs/writer/: cometml.yaml  wandb.yaml
src/datasets/: __init__.py  base_dataset.py  collate.py  custom_dir_audio_dataset.py  data_utils.py  ruslan_dataset.py
src/logger/: cometml.py  utils.py
src/loss/: __init__.py  vocos_loss.py
src/metrics/: tracker.py
src/model/: __init__.py  backbone.py  discriminators.py  heads.py  modules.py  spectral_ops.py  utils.py  vocos_model.py
src/trainer/: __init__.py  base_trainer.py  inferencer.py  trainer.py  vocos_inferencer.py  vocos_trainer.py
src/transforms/: __init__.py  melspectrogram.py
test/MOS/transcriptions/: 1.txt  2.txt  3.txt
