[project]
name = "vocos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "comet-ml>=3.56.0",
    "gdown>=5.2.0",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "librosa>=0.11.0",
    "numba>=0.60",
    "numpy<2.4",
    "torch==2.5.1",
    "torchaudio==2.5.1",
    "torchvision==0.20.1",
    "pandas>=3.0.1",
    "matplotlib>=3.10.8",
    "transformers>=5.2.0",
]
